# python-multimodule-template

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: check-secrets.sh  detect-changes.sh  discover-dependencies.py  get-build-order.sh  run-tests-for-changes.sh  semantic-version.py
.github/workflows/: ci.yml
module1/: Makefile  README.md  pyproject.toml
module1/src/module1/: __init__.py
module1/tests/: __init__.py  test_module1.py
module2/: Makefile  README.md  pyproject.toml
module2/src/module2/: __init__.py
module2/tests/: test_module2.py
modules/module1/: Makefile  pyproject.toml
modules/module1/tests/: test_module1.py
modules/module2/: Makefile  pyproject.toml
modules/module2/tests/: __init__.py
scripts/: setup-dev.sh
