# No build system - this is a workspace root, not a package

# Project metadata for workspace
[project]
name = "multimodule-template"
version = "0.1.0"
description = "A modern Python multi-module project template with workspace support"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Multi-Module Template", email = "noreply@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
# Workspace root dependencies
dependencies = [
    "module1",
    "module2",
]

# Workspace configuration for UV
[tool.uv.workspace]
members = [
    "modules/*",
]

# Workspace sources for dependencies
[tool.uv.sources]
module1 = { workspace = true }
module2 = { workspace = true }

# Development dependencies for the entire workspace
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0", 
    "black>=23.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "pyright>=1.1.0",
    "pre-commit>=3.6.0",
    "safety>=3.0.0",
    "gitpython>=3.1.0",
]

# Global tool configuration
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = [".venv", "tests", "modules/*/tests"]

[tool.pyright]
include = ["modules/*/src"]
exclude = [".venv", "build", "dist", "shared"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["modules/*/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose"

[tool.black]
line-length = 88
target-version = ['py312']

