[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/module1"]

[project]
name = "module1"
version = "0.1.0"
description = "Module1 - Base module"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

# Module-specific configuration (minimal - most config is in root pyproject.toml)
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose"
