[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/module2"]

[project]
name = "module2"
version = "0.1.0"
description = "Module2 - Depends on module1"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "module1",
]

# Module-specific configuration (minimal - most config is in root pyproject.toml)
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose"
